[package]
name = "vulkayes-window"
version = "0.1.0"
authors = ["TheEdward162 <TheEdward162@gmail.com>"]
edition = "2018"

[features]
default = ["winit_window"]

unix_use_xcb_default = []

winit_window = ["winit", "winapi"]

[dependencies]
vulkayes-core = { path = "../vulkayes-core" }

winit = { version = "0.22", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef", "winuser"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.18" }
cocoa = { version = "0.20" }
